--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ install:
 - pip install -r requirements.txt -t lib/
 script:
 - python test_main.py
-- gcloud -q preview app deploy app.yaml --promote
+- gcloud app deploy app.yaml --promote
 - python e2e_test.py
